--- a/spring-kadai8-ec-login/src/main/resources/templates/login.html
+++ b/spring-kadai8-ec-login/src/main/resources/templates/login.html
@@ -10,8 +10,11 @@
 		<h1>サンプルショッピング</h1>
 	</header>
 	<main>
+		<div th:each="error: ${errors}">
+			<span th:text="${error}"></span>
+		</div>
 		<form action="/login" method="post">
-			<input type="text" name="name" placeholder="名前"><br>
+			<input type="text" name="email" placeholder="メールアドレス"><br>
 			<input type="text" name="password" placeholder="パスワード"><br>
 			<button>ログイン</button>
 			<br> <span th:text="${message}" style="color: red"></span>
