--- a/spring-kadai8-ec-login/src/main/resources/templates/header.html
+++ b/spring-kadai8-ec-login/src/main/resources/templates/header.html
@@ -1,5 +1,5 @@
 <header>
 	<h1><a href="/items">サンプルショッピング</a></h1>
-	<span th:text="${@account.name}+' さんがログイン中'"></span>
+	<span th:text="${@account.customer.name}+' さんがログイン中'"></span>
 	<a href="/logout">ログアウト</a>
 </header>
