--- a/spring-kadai8-ec-login/src/main/resources/templates/orderConfirm.html
+++ b/spring-kadai8-ec-login/src/main/resources/templates/orderConfirm.html
@@ -18,25 +18,25 @@
 			<table border="1">
 				<tr>
 					<th>お名前</th>
-					<td th:text="${customer.name}"></td>
+					<td th:text="${@account.customer.name}"></td>
 				</tr>
 				<tr>
 					<th>住所</th>
-					<td th:text="${customer.address}"></td>
+					<td th:text="${@account.customer.address}"></td>
 				</tr>
 				<tr>
 					<th>電話番号</th>
-					<td th:text="${customer.tel}"></td>
+					<td th:text="${@account.customer.tel}"></td>
 				</tr>
 				<tr>
 					<th>e-mail</th>
-					<td th:text="${customer.email}"></td>
+					<td th:text="${@account.customer.email}"></td>
 				</tr>
 			</table>
-			<input type="hidden" name="name" th:value="${customer.name}">
-			<input type="hidden" name="address" th:value="${customer.address}">
-			<input type="hidden" name="tel" th:value="${customer.tel}">
-			<input type="hidden" name="email" th:value="${customer.email}">
+			<input type="hidden" name="name" th:value="${@account.customer.name}">
+			<input type="hidden" name="address" th:value="${@account.customer.address}">
+			<input type="hidden" name="tel" th:value="${@account.customer.tel}">
+			<input type="hidden" name="email" th:value="${@account.customer.email}">
 			<button>この内容で注文</button>
 		</form>
 	</main>
