--- a/spring-kadai8-ec-login/src/main/resources/templates/customerForm.html
+++ b/spring-kadai8-ec-login/src/main/resources/templates/customerForm.html
@@ -12,34 +12,34 @@
 		<h3>ご注文商品</h3>
 		<span th:replace="cartItem"></span>
 		<hr>
-		<h3>お客様情報を入力してください</h3>
+<!--		<h3>お客様情報を入力してください</h3>-->
 		<form action="/order/confirm" method="post">
-			<table border="1">
-				<tr>
-					<th>お名前</th>
-					<td>
-						<input type="text" name="name">
-					</td>
-				</tr>
-				<tr>
-					<th>住所</th>
-					<td>
-						<input type="text" name="address">
-					</td>
-				</tr>
-				<tr>
-					<th>電話番号</th>
-					<td>
-						<input type="text" name="tel">
-					</td>
-				</tr>
-				<tr>
-					<th>e-mail</th>
-					<td>
-						<input type="text" name="email">
-					</td>
-				</tr>
-			</table>
+<!--			<table border="1">-->
+<!--				<tr>-->
+<!--					<th>お名前</th>-->
+<!--					<td>-->
+<!--						<input type="text" name="name">-->
+<!--					</td>-->
+<!--				</tr>-->
+<!--				<tr>-->
+<!--					<th>住所</th>-->
+<!--					<td>-->
+<!--						<input type="text" name="address">-->
+<!--					</td>-->
+<!--				</tr>-->
+<!--				<tr>-->
+<!--					<th>電話番号</th>-->
+<!--					<td>-->
+<!--						<input type="text" name="tel">-->
+<!--					</td>-->
+<!--				</tr>-->
+<!--				<tr>-->
+<!--					<th>e-mail</th>-->
+<!--					<td>-->
+<!--						<input type="text" name="email">-->
+<!--					</td>-->
+<!--				</tr>-->
+<!--			</table>-->
 			<button>確認画面へ</button>
 		</form>
 	</main>
