--- a/spring-kadai8-ec-login/src/main/resources/templates/login.html
+++ b/spring-kadai8-ec-login/src/main/resources/templates/login.html
@@ -14,8 +14,8 @@
 			<span th:text="${error}"></span>
 		</div>
 		<form action="/login" method="post">
-			<input type="text" name="email" placeholder="メールアドレス"><br>
-			<input type="text" name="password" placeholder="パスワード"><br>
+			<input type="text" name="email" placeholder="メールアドレス" th:value="${email}"><br>
+			<input type="text" name="password" placeholder="パスワード" th:value="${password}"><br>
 			<button>ログイン</button>
 			<br> <span th:text="${message}" style="color: red"></span>
 		</form>
